reuse matix class